# distributed-math-ocr

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  MANIFEST.in  README.md  TODO.md  bootstrap.py  docker-compose.yml  lock.py  pyproject-archive.toml  pyproject.toml  setup.py
docker/: init_rabbitmq.sh  python_services.Dockerfile  rabbitmq.Dockerfile
examples/: rabbitmq_examples.py
mathclips/front_end/: __init__.py  app.py  run_streamlit.py
mathclips/front_end/.streamlit/: secrets.toml
mathclips/front_end/pages/: default_session_equation_sections.yml  notebook_page.py  upload_page.py
mathclips/proto/: database_edit_request.proto  generate_proto_package.py  image.proto  ocr_result.proto
mathclips/proto/pb_py_classes/: database_edit_request_pb2.py  database_edit_request_pb2.pyi  image_pb2.py  image_pb2.pyi  ocr_result_pb2.py  train_pb2.py
mathclips/services/: __init__.py  image_to_equation_interface.py  ingest.py  logger.py  mongodb.py  rmq.py  util.py
scripts/: generate_proto_classes.sh
src/: logger.py
src/front_end/: hello_streamlit.py  run_streamlit.py
src/front_end/.streamlit/: secrets.toml
src/front_end/pages/: default_session_equation_sections.yml  notebook_page.py  test_equation_sections.yml  upload_page.py
src/ocr_services/: image_to_equation_interface.py  logger.py  mq.py
src/proto/: equation.proto  image.proto  train.proto  uint_packed_bytes.proto
src/proto/classes/: equation_pb2.py  (+1 more)
src/services/: __init__.py  image_to_equation_interface.py  ingest.py  mongodb.py  rmq.py  util.py
test/: test_end_to_end.py  test_ocr_code.py
(+8 files in other folders)
